# plasmid-design

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
configs/: example.yaml
src/plasmid_design/: constants.py  drive.py  idt_api.py  plasmid_design.py  sequence.py  utils.py
